# ACM-INTRA-HACK

./: .gitignore
backend/: action_encoder.pkl  main.py  predict.py  pyproject.toml  recommendation_model.pkl  risk_encoder.pkl  severity_encoder.pkl  test_dependency.py  train.py
backend/app/: ai_service.py  api.py  core.py  models.py  services.py  utils.py
backend/dataset/: recommendations.csv
backend/test_project/: package.json
test-extn/: package-lock.json  package.json
test-extn/src/: dependency-watcher.js  extension.js  extracter.js  highlighter.js  panel.js  parser.js  version-analyzer.js
test-extn/src/code-highlighter/: getRange.js  highlighter.js
test-extn/src/panel/: htmlBuilder.js  index.js  templates.js
test-extn/src/versionChanges/: getChangelogs.js  requiredChangelogs.js
