[project]
name = "packages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "packaging>=26.2",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]

[tool.uv.workspace]
members = [
    "venv",
]
